# democraciv-discord-bot

./: .gitignore  .travis.yml  LICENSE  README.md  bot.py  client.py  config.py  docker-compose.yml  migrate.py  requirements.txt
api/: Dockerfile  (+7 more)
bot/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
bot/config/: __init__.py  config.py  config_example.py  mk.py  mk_example.py
bot/db/: migrate.py  migrate_1x_2_0.py  migrate_tags.py  schema.sql
bot/ext/bank/: bank_listener.py
bot/module/: admin.py  bank.py  bills.py  government.py  guild.py  laws.py  legislature.py  logging.py  logs.py  meta.py  ministry.py  misc.py  mk_13_commons.py  moderation.py  motions.py  nation.py  npcs.py  parties.py  profile.py  roles.py  starboard.py  supremecourt.py  tags.py  utility.py
bot/presenters/: guild.py  guild_forms.py  ministry.py  npc_forms.py  npcs.py  parties.py  party_forms.py  selfrole_forms.py  selfroles.py  starboard.py  tag_forms.py  tags.py  utility.py
bot/services/: README.md  context.py  guild.py  ministry.py  npcs.py  parties.py  results.py  selfroles.py  starboard.py  tags.py  utility.py
bot/slash/: README.md  __init__.py  checks.py  context.py  forms.py  government.py  guild.py  legal.py  legislature.py  meta.py  ministry.py  moderation.py  npcs.py  parties.py  roles.py  starboard.py  tags.py  transformers.py  ui.py  utility.py
bot/utils/: api_wrapper.py  checks.py  context.py  converter.py  exceptions.py  help.py  law_helper.py  mixin.py  models.py  paginator.py  text.py  utils.py
web/legalcode-rs/: Cargo.toml  Rocket.toml
(+136 files in other folders)
