[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns>=3.2.0",
    "async-lru>=2.0.4",
    "asyncpg>=0.29.0",
    "certifi>=2024.8.30",
    "discord-ext-menus-views",
    "discord-ext-menus>=1.1",
    "discord-py>=2.4.0",
    "fuzzywuzzy>=0.18.0",
    "google-api-python-client>=2.147.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "jishaku>=2.5.2",
    "lru-dict>=1.3.0",
    "psutil>=6.0.0",
    "python-levenshtein>=0.26.0",
    "pytz>=2024.2",
    "uvloop>=0.20.0",
]

[tool.uv.sources]
discord-ext-menus-views = { git = "https://github.com/oliver-ni/discord-ext-menus-views" }
