[package]
name = "legalcode-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rocket_dyn_templates = { version = "0.2", features = ["tera"] }
